--- a/css/wizardwidget.css
+++ b/css/wizardwidget.css
@@ -1,14 +1,3 @@
-.wizard {
-    margin: 20px auto;
-    background: #fff;
-}
-
-.wizard .nav-tabs {
-    position: relative;
-    margin: 40px auto 0 auto;
-    border-bottom-color: #e0e0e0;
-}
-
 .wizard > div.wizard-inner {
     position: relative;
 }
@@ -26,7 +15,7 @@
 }
 
 .wizard .nav-tabs > li.active > a, .wizard .nav-tabs > li.active > a:hover, .wizard .nav-tabs > li.active > a:focus {
-    color: #555555;
+    color: #4891c3;
     cursor: default;
     border: 0;
     border-bottom-color: transparent;
@@ -72,42 +61,7 @@
 }
 
 .wizard .nav-tabs > li {
-    width: 25%;
-}
-
-.wizard li:after {
-    content: " ";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-    bottom: 0;
-    border: 5px solid transparent;
-    border-bottom-color: #5bc0de;
-    transition: 0.1s ease-in-out;
-}
-
-.wizard li.active:after {
-    opacity: 1;
-    border: 10px solid transparent;
-    border-bottom-color: #5bc0de;
-}
-
-.wizard .nav-tabs > li a {
-    width: 70px;
-    height: 70px;
-    margin: 20px auto;
-    border-radius: 100%;
-    padding: 0;
-}
-
-.wizard .nav-tabs > li a:hover {
-    background: transparent;
-}
-
-.wizard .tab-pane {
-    position: relative;
-    padding-top: 50px;
+    display: inline-block;
 }
 
 .wizard h3 {
@@ -123,12 +77,6 @@
 
     .wizard li span.round-tab {
         font-size: 16px;
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-    }
-
-    .wizard .nav-tabs > li a {
         width: 50px;
         height: 50px;
         line-height: 50px;
